[tool.poetry]
name = "lmfit_bo"
version = "0.1.0"
description = "Nonlinear least square using Bayesian optimization"
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lmfit = "^1.0.3"
botorch = "^0.7.2"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
